# directory_bookmarks

./: CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
android/src/main/kotlin/com/example/directory_bookmarks/: DirectoryBookmarksPlugin.kt
example/lib/: main.dart
lib/src/: directory_bookmark_handler.dart
lib/src/models/: bookmark_data.dart
lib/src/platform/: platform_handler.dart
linux/: CMakeLists.txt  directory_bookmarks_plugin.cc
linux/include/directory_bookmarks/: directory_bookmarks_plugin.h
macos/Classes/: DirectoryBookmarkHandler.swift  DirectoryBookmarksPlugin.swift
